修改骨骼模态的实现，变为线图邻接，同时清理模态参数传递方式

--- a/config/ucla/infogcn.yaml
+++ b/config/ucla/infogcn.yaml
@@ -10,7 +10,9 @@ num_point: 20
 num_person: 1
 num_class: 10
 dataset: "NW-UCLA"
-datacase: "bone"
+datacase: "bone"  # 暂时遗留
+use_bone: true
+use_motion: false
 use_vel: false
 
 # 处理器配置
